增加时间分，修改查看页面和编辑页面 修改分数填写为下拉框 取消回车屏蔽功能，避免多行文本无法输入

--- a/Competition.Web/Views/Event/_EventGridViewPartial.cshtml
+++ b/Competition.Web/Views/Event/_EventGridViewPartial.cshtml
@@ -49,6 +49,7 @@
         settings.Columns.Add("MenuOrder");
         settings.Columns.Add("TimeLimit");
         settings.Columns.Add("Amount");
+        settings.Columns.Add("HasTimeScore");
         //settings.Columns.Add("ChipId");
     });
     if (ViewData["EditError"] != null){
