--- a/Competition.Web/Views/Event/_EventGridViewPartial.cshtml
+++ b/Competition.Web/Views/Event/_EventGridViewPartial.cshtml
@@ -50,6 +50,7 @@
         settings.Columns.Add("TimeLimit");
         settings.Columns.Add("Amount");
         settings.Columns.Add("HasTimeScore");
+        settings.Columns.Add("MultiScoreDetailSet");
         //settings.Columns.Add("ChipId");
     });
     if (ViewData["EditError"] != null){
