修改评分单编号由数字改为字符串

--- a/Competition.Web/Views/EventCriterias/_EventCriteriasGridViewPartial.cshtml
+++ b/Competition.Web/Views/EventCriterias/_EventCriteriasGridViewPartial.cshtml
@@ -49,7 +49,7 @@
             });
         });
         settings.Columns.Add("Note");
-        settings.Columns.Add("SetId");
+        settings.Columns.Add("SetName");
     });
     if (ViewData["EditError"] != null){
         grid.SetEditErrorText((string)ViewData["EditError"]);
