裁判呼叫选手功能 选手签到的第二屏幕功能

--- a/Competition.Web/Views/Schedule/_ScheduleJudgeGridViewPartial.cshtml
+++ b/Competition.Web/Views/Schedule/_ScheduleJudgeGridViewPartial.cshtml
@@ -1,7 +1,11 @@
 @{
-    var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "ScheduleJudgeGridView";
-        settings.CallbackRouteValues = new { Controller = "Schedule", Action = "ScheduleJudgeGridViewPartial" };
+        settings.CallbackRouteValues = new
+        {
+            Controller = "Schedule",
+            Action = "ScheduleJudgeGridViewPartial" };
 
         //settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "Schedule", Action = "ScheduleJudgeGridViewPartialAddNew" };
         //settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "Schedule", Action = "ScheduleJudgeGridViewPartialUpdate" };
@@ -10,7 +14,7 @@
         settings.SettingsBehavior.ConfirmDelete = true;
         settings.Width = Unit.Percentage(100);
 
-        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCells;
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = true;
         settings.EditFormLayoutProperties.SettingsAdaptivity.AdaptivityMode = FormLayoutAdaptivityMode.SingleColumnWindowLimit;
         settings.EditFormLayoutProperties.SettingsAdaptivity.SwitchToSingleColumnAtWindowInnerWidth = 600;
@@ -29,17 +33,47 @@
 
         //settings.CommandColumn.Width = Unit.Percentage(18);
 
-        settings.Columns.Add(c=>{
+        settings.Columns.Add(c =>
+        {
             c.Caption = "#";
-            c.Width = Unit.Pixel(50);
+            //c.Width = Unit.Pixel(250);
             c.AdaptivePriority = 1;
-            c.SetDataItemTemplateContent(tc=> {
-                ViewContext.Writer.Write(
-                  Html.ActionLink("评分", "ScoreJudgeEditFormPartial", "Score", new { ScheduleId=DataBinder.Eval(tc.DataItem,"Id") }, null)
+            c.SetDataItemTemplateContent(tc =>
+            {
 
-                        );
+                Competition.EF.Models.SchedulStatus status = (Competition.EF.Models.SchedulStatus)DataBinder.Eval(tc.DataItem, "Status");
+                switch (status)
+                {
+                    case Competition.EF.Models.SchedulStatus.Waiting:
+                        ViewContext.Writer.Write("<span>未报到</span>");
+                        break;
+                    case Competition.EF.Models.SchedulStatus.Registered:
+                        ViewContext.Writer.Write(
+              Html.ActionLink("呼叫", "JudgeCallCompetitor", "Score", new { ScheduleId = DataBinder.Eval(tc.DataItem, "Id") ,cmd="call"}, new { @class = "btn btn-warning col-12" })
+
+                    );
+                        break;
+                    case Competition.EF.Models.SchedulStatus.Calling:
+                        ViewContext.Writer.Write(
+              Html.ActionLink("取消", "JudgeCallCompetitor", "Score", new { ScheduleId = DataBinder.Eval(tc.DataItem, "Id") ,cmd="cancel"}, new { @class = "btn btn-danger col-6" }));
+                        //ViewContext.Writer.Write("<span>  </span>");
+                        ViewContext.Writer.Write(
+           Html.ActionLink("开始", "JudgeCallCompetitor", "Score", new { ScheduleId = DataBinder.Eval(tc.DataItem, "Id") ,cmd="inposition"}, new { @class = "btn btn-success col-6" }));
+                        break;
+                    case Competition.EF.Models.SchedulStatus.Inprogress:
+                        ViewContext.Writer.Write(
+                Html.ActionLink("评分", "ScoreJudgeEditFormPartial", "Score", new { ScheduleId = DataBinder.Eval(tc.DataItem, "Id") }, new { @class = "btn btn-primary col-12" })
+
+                      );
+                        break;
+
+                };
+
+
             });
         });
+
+
 
 
         settings.KeyFieldName = "Id";
