--- a/Competition.Web/Views/Score/_ScoreJudgeViewFormPartial.cshtml
+++ b/Competition.Web/Views/Score/_ScoreJudgeViewFormPartial.cshtml
@@ -180,5 +180,5 @@
 
 }
 <script>
-    watermark("@User.Identity.Name")
+    watermark("@Model.Score.Judge.StaffId\n @Model.Score.Judge.Name")
 </script>
