调整了报表的统计逻辑

--- a/Competition.Web/Views/Report/_CompanyRankDetailGridViewPartial.cshtml
+++ b/Competition.Web/Views/Report/_CompanyRankDetailGridViewPartial.cshtml
@@ -26,16 +26,18 @@
         settings.Columns.Add("Company");
 
         settings.Columns.Add("Bishi");
-        settings.Columns.Add("Baoxian");
+        settings.Columns.Add("ReplaceME");
+        settings.Columns.Add("ReplaceAV");
+        settings.Columns.Add("Radar");
+        settings.Columns.Add("Seal");
+        settings.Columns.Add("Lockwire");
+        settings.Columns.Add("Jingujian");
+        settings.Columns.Add("Caozong");
         settings.Columns.Add("Biaoxian");
-        settings.Columns.Add("Tujiao");
-        settings.Columns.Add("APU");
-        settings.Columns.Add("Guanlu");
-        settings.Columns.Add("Daqi");
         settings.Columns.Add("Shouce");
-        settings.Columns.Add("Shuiping");
-        settings.Columns.Add("Yijiandeng");
-        settings.Columns.Add("Dianyuan");
+        settings.Columns.Add("THS");
+        settings.Columns.Add("CVR");
+        settings.Columns.Add("Call");
 
         settings.Columns.Add("TotalScore");
     });
