批量录入笔试成绩

--- a/Competition.Web/Views/Schedule/Index.cshtml
+++ b/Competition.Web/Views/Schedule/Index.cshtml
@@ -6,4 +6,5 @@
 @Html.Action("ScheduleGridViewPartial")
 
 @Html.ActionLink("批量录入", "Multi")
-
+<br />
+@Html.ActionLink("笔试成绩批量录入", "BishiScoreMulti")
