--- a/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
+++ b/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
@@ -128,12 +128,12 @@
                {
                    s.Properties.Items.Add(i.ToString(), i);
                }
-
+              
 
            }).GetHtml()
 
             </div>
-            <div class="col-3 float-right">
+            <div class="col-2 float-right">
                 @Html.DevExpress().Button(btnSettings =>
                     {
                     btnSettings.Name = "btnUpdate_top";
@@ -141,17 +141,21 @@
                     btnSettings.UseSubmitBehavior = true;
                     // btnSettings.ClientSideEvents.Click = "function(s, e){ ScoreJudgeGridView.UpdateEdit(); }";
                     }).GetHtml()
+             
+            </div>
+            <div class="col-2 float-right">
                 @Html.DevExpress().Button(btnSettings =>
-                {
-                btnSettings.Name = "btnCancel_top";
-                btnSettings.Text = "取消";
-                btnSettings.Style[HtmlTextWriterStyle.MarginLeft] = "5px";
-                btnSettings.ClientSideEvents.Click = "function(s, e){ document.location='" + DevExpressHelper.GetUrl(new { Controller = "Score", Action = "Index" }) + "'; }";
-                }).GetHtml()
+           {
+               btnSettings.Name = "btnCancel_top";
+               btnSettings.Text = "取消";
+               btnSettings.Style[HtmlTextWriterStyle.MarginLeft] = "5px";
+               btnSettings.RenderMode = ButtonRenderMode.Danger;
+               btnSettings.ClientSideEvents.Click = "function(s, e){ document.location='" + DevExpressHelper.GetUrl(new { Controller = "Score", Action = "Index" }) + "'; }";
+           }).GetHtml()
             </div>
         </div>
         <div class="row"><p> </p></div>
-        <table class="table table-striped table-bordered">
+        <table class="table table-striped table-bordered" style="font-size:large">
             <thead>
                 <tr>
                     <th class="col-8 text-center">
@@ -257,22 +261,31 @@
             </div>
 
         </div>
-        <div class="row float-right">
-            @Html.DevExpress().Button(btnSettings =>
-                {
-                btnSettings.Name = "btnUpdate";
-                btnSettings.Text = "提交";
-                btnSettings.UseSubmitBehavior = true;
-                // btnSettings.ClientSideEvents.Click = "function(s, e){ ScoreJudgeGridView.UpdateEdit(); }";
-                }).GetHtml()
-            @Html.DevExpress().Button(btnSettings =>
-            {
-            btnSettings.Name = "btnCancel";
-            btnSettings.Text = "取消";
-            btnSettings.Style[HtmlTextWriterStyle.MarginLeft] = "5px";
-            btnSettings.ClientSideEvents.Click = "function(s, e){ document.location='" + DevExpressHelper.GetUrl(new { Controller = "Score", Action = "Index" }) + "'; }";
-            }).GetHtml()
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-2 float-right">
+                @Html.DevExpress().Button(btnSettings =>
+           {
+               btnSettings.Name = "btnUpdate";
+               btnSettings.Text = "提交";
+               btnSettings.RenderMode = ButtonRenderMode.Button;
+               btnSettings.UseSubmitBehavior = true;
+               // btnSettings.ClientSideEvents.Click = "function(s, e){ ScoreJudgeGridView.UpdateEdit(); }";
+           }).GetHtml()
+            </div>
+            <div class="col-2 float-right">
+                @Html.DevExpress().Button(btnSettings =>
+           {
+               btnSettings.Name = "btnCancel";
+               btnSettings.Text = "取消";
+               btnSettings.RenderMode = ButtonRenderMode.Danger;
+               btnSettings.Style[HtmlTextWriterStyle.MarginLeft] = "5px";
+               btnSettings.ClientSideEvents.Click = "function(s, e){ document.location='" + DevExpressHelper.GetUrl(new { Controller = "Score", Action = "Index" }) + "'; }";
+           }).GetHtml()
+            </div>
         </div>
+      
+       
     </div>
 
 @*</form>*@
