删除裁判评分页面的下部按钮，调整数据大屏细节

--- a/Competition.Web/Views/Report/test.cshtml
+++ b/Competition.Web/Views/Report/test.cshtml
@@ -240,28 +240,28 @@
                     value: @ViewBag.schedule_progress,
                 },
                 companyrank_config: {
-                    header: ['公司', '总分', '进度'],
+                    header: ['公司', '总分', '完成数量'],
                     data:@Html.Raw(ViewBag.companyRanksList),
                     index: true,
-                    columnWidth: [50,100],
+                    columnWidth: [50],
                     align: ['center'],
                     rowNum: [24],
                     hoverPause: false,
                 },
                 avrank_config: {
-                    header: ['姓名', '公司', '进度','总分'],
+                    header: ['姓名', '公司', '完成数量','总分'],
                     data:@Html.Raw(ViewBag.AVRanksList),
                     index: true,
-                    columnWidth: [50,80],
+                    columnWidth: [50],
                     align: ['center'],
                     rowNum: [8],
                     hoverPause: false,
                 },
                 merank_config: {
-                    header: ['姓名', '公司', '进度', '总分'],
+                    header: ['姓名', '公司', '完成数量', '总分'],
                     data:@Html.Raw(ViewBag.MERanksList),
                     index: true,
-                    columnWidth: [50,80],
+                    columnWidth: [50],
                     align: ['center'],
                     rowNum: [8],
                     hoverPause: false,
