--- a/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
+++ b/Competition.Web/Views/Score/_ScoreJudgeEditFormPartial.cshtml
@@ -261,7 +261,8 @@
             </div>
 
         </div>
-        <div class="row">
+        
+        @*<div class="row">
             <div class="col-6"></div>
             <div class="col-2 float-right">
                 @Html.DevExpress().Button(btnSettings =>
@@ -283,7 +284,7 @@
                btnSettings.ClientSideEvents.Click = "function(s, e){ document.location='" + DevExpressHelper.GetUrl(new { Controller = "Score", Action = "Index" }) + "'; }";
            }).GetHtml()
             </div>
-        </div>
+        </div>*@
       
        
     </div>
